Add ability to use TPM to tmcc/tmcd, necessary build system changes (including an update to make schemacheck happy), and client-side script modifications.
Tested by me on a few different machines. Ok by Mike.

--- a/configure.in
+++ b/configure.in
@@ -206,6 +206,7 @@ AC_SUBST(PELABSUPPORT)
 AC_SUBST(ELVIN_COMPAT)
 AC_SUBST(ISOLATEADMINS)
 AC_SUBST(DYNAMICROOTPASSWORDS)
+AC_SUBST(TPM)
 AC_SUBST(REMOTEWIKIDOCS)
 AC_SUBST(PROTOGENI_SUPPORT)
 AC_SUBST(PROTOGENI_CLEARINGHOUSE)
@@ -291,6 +292,7 @@ PELABSUPPORT=0
 ELVIN_COMPAT=0
 ISOLATEADMINS=1
 DYNAMICROOTPASSWORDS=1
+TPM=0
 REMOTEWIKIDOCS=1
 PROTOGENI_SUPPORT=0
 PROTOGENI_CLEARINGHOUSE=0
@@ -411,6 +413,10 @@ fi
 if test $DYNAMICROOTPASSWORDS -eq 1; then
     AC_DEFINE_UNQUOTED(DYNAMICROOTPASSWORDS, 1)
 fi
+if test $TPM -eq 1; then
+    AC_DEFINE_UNQUOTED(TPM, 1)
+fi
+
 
 LOG_TESTBED=`echo "LOG_$TBLOGFACIL" | tr a-z A-Z`
 AC_DEFINE_UNQUOTED(LOG_TESTBED, $LOG_TESTBED)
