--- a/tmcd/common/config/rc.config
+++ b/tmcd/common/config/rc.config
@@ -97,14 +97,15 @@ elsif (WINDOWS()) {
 		    "rc.tarfiles", "rc.rpms");
 }
 else {
-    @bootscripts = ("rc.firewall",
+    @bootscripts = ("rc.firewall", "rc.tpmsetup",
 		    "rc.misc", "rc.localize", "rc.keys", "rc.mounts",
 		    "rc.topomap", "rc.accounts",
 		    "rc.route", "rc.tunnels", "rc.ifconfig", "rc.delays",
 		    "rc.hostnames", "rc.trace", 
 		    "rc.syncserver", "rc.trafgen",
 		    "rc.tarfiles", "rc.rpms", "rc.progagent", "rc.linkagent",
-		    "rc.tiptunnels", "rc.motelog", "rc.simulator");
+		    "rc.tiptunnels", "rc.motelog", "rc.simulator"
+		    );
 }
 
 # Execute the action.
