More work, still not tested

--- a/configure.in
+++ b/configure.in
@@ -89,6 +89,7 @@ AC_PATH_PROG(ELVIN_CONFIG,elvin-config)
 AC_PATH_PROG(JAVAC,javac)
 AC_PATH_PROG(JAR,jar)
 AC_PATH_PROG(SUDO,sudo)
+AC_PATH_PROG(UUIDGEN,uuidgen)
 
 AC_CHECK_TOOL(SSH,ssh)
 
@@ -194,6 +195,7 @@ AC_SUBST(SSLCERT_ORGNAME)
 AC_SUBST(FRISEBEEMCASTADDR)
 AC_SUBST(FRISEBEEMCASTPORT)
 AC_SUBST(WINSUPPORT)
+AC_SUBST(NSVERIFY)
 AC_SUBST(CVSSUPPORT)
 AC_SUBST(TRACSUPPORT)
 AC_SUBST(CHATSUPPORT)
@@ -274,6 +276,7 @@ BUGDBSUPPORT=0
 OPSDBSUPPORT=0
 MAILMANSUPPORT=0
 WINSUPPORT=0
+NSVERIFY=1
 CVSSUPPORT=0
 TRACSUPPORT=0
 CHATSUPPORT=0
