--- a/install/ports/emulab-ops/Makefile
+++ b/install/ports/emulab-ops/Makefile
@@ -7,7 +7,10 @@ OSMAJOR!= /usr/bin/uname -r | /usr/bin/sed -e 's/\..*//'
 OSMINOR!= /usr/bin/uname -r | /usr/bin/sed -e 's/[0-9][0-9]*\.\([0-9][0-9]*\).*/\1/'
 
 PORTNAME=	emulab-ops
-.if ${OSMAJOR} >= 6
+.if ${OSMAJOR} > 6
+PORTVERSION=	3.0
+.else
+.if ${OSMAJOR} > 5
 .if ${OSMINOR} >= 3
 PORTVERSION=	2.1
 .else
@@ -15,6 +18,7 @@ PORTVERSION=	2.0
 .endif
 .else
 PORTVERSION=	1.4
+.endif
 .endif
 CATEGORIES=	misc
 MASTER_SITES=	#none
@@ -75,7 +79,7 @@ BUILD_DEPENDS=	\
 	${LOCALBASE}/lib/perl5/site_perl/${PERL_VER}/${PERL_ARCH}/Mysql.pm:${PORTSDIR}/databases/p5-DBD-mysql50
 .endif
 
-LIB_DEPENDS= lthread.[23]:${PORTSDIR}/devel/linuxthreads \
+LIB_DEPENDS= lthread.[236]:${PORTSDIR}/devel/linuxthreads \
 	ulsshxmlrpcpp.0:${PORTSDIR}/misc/ulsshxmlrpcpp
 
 .if defined(ELVIN_COMPAT)
