--- a/protogeni/lib/GeniUtil.pm.in
+++ b/protogeni/lib/GeniUtil.pm.in
@@ -22,6 +22,7 @@ use GeniHRN;
 my $TB		   = "@prefix@";
 my $TBOPS          = "@TBOPSEMAIL@";
 my $OURDOMAIN      = "@OURDOMAIN@";
+my $UUIDGEN	   = "@UUIDGEN@";
 my $user	   = "geniuser";
 my $group          = "GeniSlices";
 
@@ -76,7 +77,7 @@ sub FlushCaches()
 #
 sub NewUUID()
 {
-    my $uuid = `/usr/bin/uuidgen`;
+    my $uuid = `$UUIDGEN`;
 
     if ($uuid =~ /^(\w{8}\-\w{4}\-\w{4}\-\w{4}\-\w{12})$/) {
 	return $1;
