Continued tweaks.  Automated elabinelab ops-install now works.

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -348,7 +348,7 @@ undo-configure:
 elabinelab:
 	-mkdir -p $(INSTALL_TOPDIR)/src
 	rm -f $(INSTALL_TOPDIR)/src/emulab-src.tar.gz
-	tar czf $(INSTALL_TOPDIR)/src/emulab-src.tar.gz -C $(SRCDIR) .
+	tar czf $(INSTALL_TOPDIR)/src/emulab-src.tar.gz -C $(SRCDIR) --exclude=.git .
 
 # How to recursively descend into subdirectories to make general
 # targets such as `all'.
