--- a/install/ports/emulab-fs/Makefile
+++ b/install/ports/emulab-fs/Makefile
@@ -36,6 +36,9 @@ MAINTAINER=	hibler@cs.utah.edu
 # We must make sure PERL is built with this.
 #
 .MAKEFLAGS+=	ENABLE_SUIDPERL=yes
+.if ${PORTVERSION} == "3.0"
+.MAKEFLAGS+=	PERL_VERSION=5.10.0 PERL_VER=5.10.0 PERL_ARCH=mach
+.endif
 
 #
 # This prevents any ports from trying to run interactively - some, ask silly
@@ -45,17 +48,8 @@ MAINTAINER=	hibler@cs.utah.edu
 
 RUN_DEPENDS= gmake:${PORTSDIR}/devel/gmake \
 	sudo:${PORTSDIR}/security/sudo \
-	rsync:${PORTSDIR}/net/rsync
-
-.if ${OSMAJOR} >= 6
-.else
-RUN_DEPENDS+= smbd:${PORTSDIR}/net/samba3
-.endif
-
-.if ${PORTVERSION} == "2.1"
-# not sure why we don't build this for 6.0-6.2...
-RUN_DEPENDS+= smbd:${PORTSDIR}/net/samba3
-.endif
+	rsync:${PORTSDIR}/net/rsync \
+	smbd:${PORTSDIR}/net/samba3
 
 NO_BUILD=	yes
 
