--- a/install/fs-install.in
+++ b/install/fs-install.in
@@ -84,7 +84,9 @@ else {
 #
 my $FS_PORT = "emulab-fs-1.4";
 if ($FBSD_MAJOR > 4) {
-    if ($FBSD_MAJOR == 6 && $FBSD_MINOR > 2) {
+    if ($FBSD_MAJOR > 6) {
+	$FS_PORT = "emulab-fs-3.0";
+    } elsif ($FBSD_MAJOR == 6 && $FBSD_MINOR > 2) {
 	$FS_PORT = "emulab-fs-2.1";
     } else {
 	$FS_PORT = "emulab-fs-2.0";
