--- a/apache/GNUmakefile.in
+++ b/apache/GNUmakefile.in
@@ -11,6 +11,15 @@ TESTBED_SRCDIR	= @top_srcdir@
 OBJDIR		= ..
 SUBDIR		= apache
 
+SYSTEM	       := $(shell uname -s)
+ifeq ($(SYSTEM),FreeBSD)
+FBSDREL	:= $(shell uname -r | sed -e 's/\([^-][^-]*\)-.*/\1/')
+FBSDMAJ := $(basename $(FBSDREL))
+ifeq ($(FBSDMAJ),7)
+SCRIPT_HACK	= 1
+endif
+endif
+
 include $(OBJDIR)/Makeconf
 
 CONFIG_FILES	= httpd.conf httpd.conf-ops
@@ -42,10 +51,26 @@ httpd.conf.fixed: httpd.conf
 	    echo "Updated httpd.conf"; \
 	fi
 
-install: httpd.conf.fixed
-	$(INSTALL_DATA) httpd.conf.fixed $(INSTALL_APACHE_CONFIG)/httpd.conf
+#
+# XXX another woeful hack.  There appears to be a well-documented problem
+# with Apache and PHP4, where loading PHP with certain extensions will cause
+# Apache to crash immediately.  However, if you start it without PHP and then
+# use apachectl to restart it *with* PHP, all is well.  Go figure...
+# We install this script which accomodates that...ahem, "behavior."
+# Since we have only seen this on FBSD7, we only do it there.
+#
+script-install: apache-emulab
+ifeq ($(SCRIPT_HACK),1)
+	@if [ -f /usr/local/etc/rc.d/apache -a ! -f /usr/local/etc/rc.d/.apache.real ]; then \
+	    mv /usr/local/etc/rc.d/apache /usr/local/etc/rc.d/.apache.real; \
+	fi
+	$(INSTALL) -m 755 $(SRCDIR)/apache-emulab /usr/local/etc/rc.d/apache-emulab
 
-control-install: httpd.conf-ops
+install: script-install httpd.conf.fixed
+	$(INSTALL_DATA) httpd.conf.fixed $(INSTALL_APACHE_CONFIG)/httpd.conf
+endif
+
+control-install: script-install httpd.conf-ops
 	$(INSTALL_DATA) httpd.conf-ops $(INSTALL_APACHE_CONFIG)/httpd.conf
 
 clean:
