--- a/install/boss-install.in
+++ b/install/boss-install.in
@@ -160,6 +160,7 @@ my $TFTPD_PKG	  = "emulab-tftp-hpa-0.48";
 my $P5DBD_PKG	  = "p5-DBD-mysql50-3.0002";
 # XXX temporary until fix dependencies in emulab-boss package
 my $P5GD_PKG	  = "p5-GD-2.07";
+my $PYM2_PKG	  = "py25-m2crypto-0.19.1";
 
 #
 # Named pid file.
@@ -502,7 +503,7 @@ Phase "ports", "Installing ports", sub {
 			if ($pname);
 		    ExecQuietFatal("$ENV PKG_PATH=$packagedir $PKG_ADD $P5DBD_PKG");
 		};
-		# XXX cannot seem to get the dependency into emulab-boss pkg
+		# XXX cannot seem to get these dependencies into emulab-boss
 		Phase "p5-GD", "Installing GD graphics package", sub {
 		    my $pname = `$PKG_INFO -E 'p5-GD-*' 2>/dev/null`;
 		    chomp($pname);
@@ -516,7 +517,21 @@ Phase "ports", "Installing ports", sub {
 			if ($pname);
 		    ExecQuietFatal("$ENV PKG_PATH=$packagedir $PKG_ADD $P5GD_PKG");
 		};
-
+		if ($FBSD_MAJOR > 6) {
+		    Phase "py-m2crypto", "Installing python m2crypto package", sub {
+			my $pname = `$PKG_INFO -E 'py25-m2crypto-*' 2>/dev/null`;
+			chomp($pname);
+			if ($pname eq $PYM2_PKG) {
+			    PhaseSkip("py25-m2crypto already up to date");
+			}
+			if (!$packagedir) {
+			    PhaseSkip("No package directory provided");
+			}
+			ExecQuietFatal("$ENV PKG_PATH=$packagedir $PKG_DEL -f $pname")
+			    if ($pname);
+			ExecQuietFatal("$ENV PKG_PATH=$packagedir $PKG_ADD $PYM2_PKG");
+		    };
+		}
 	    }
 	}
 	else {
