--- a/install/ops-install.in
+++ b/install/ops-install.in
@@ -73,6 +73,8 @@ my $TBADMINGID  = 101;
 #
 # XXX temporary for perl DBD mysql access
 my $P5DBD_PKG	  = "p5-DBD-mysql50-3.0002";
+# XXX temporary until fix dependencies in emulab-ops package
+my $PYM2_PKG	  = "py25-m2crypto-0.19.1";
 
 #
 # Allow this to work if the library is left in the source directory
@@ -395,6 +397,22 @@ Phase "ports", "Installing ports", sub {
 		    if ($pname);
 		ExecQuietFatal("$ENV PKG_PATH=$packagedir $PKG_ADD $P5DBD_PKG");
 	    };
+	    # XXX cannot seem to get these dependencies into emulab-boss
+	    if ($FBSD_MAJOR > 6) {
+		Phase "py-m2crypto", "Installing python m2crypto package", sub {
+		    my $pname = `$PKG_INFO -E 'py25-m2crypto-*' 2>/dev/null`;
+		    chomp($pname);
+		    if ($pname eq $PYM2_PKG) {
+			PhaseSkip("py25-m2crypto already up to date");
+		    }
+		    if (!$packagedir) {
+			PhaseSkip("No package directory provided");
+		    }
+		    ExecQuietFatal("$ENV PKG_PATH=$packagedir $PKG_DEL -f $pname")
+			if ($pname);
+		    ExecQuietFatal("$ENV PKG_PATH=$packagedir $PKG_ADD $PYM2_PKG");
+		};
+	    }
 	}
     };
     Phase "fs-packages", "Installing FS packages", sub {
